# armms-ros

./: .gitignore  rosconsole.bash  rosconsole.yaml  rosconsole.zsh
armms_bringup/: CMakeLists.txt  package.xml
armms_bringup/launch/: at1x_robot.launch
armms_bringup/launch/config/: armms-gpio-overlay.dts  armms-gpio.dtbo  armms-gpio.dts  recorded_topics.yaml
armms_bringup/scripts/: install
armms_control/: CMakeLists.txt  package.xml
armms_control/include/armms_control/: armms_at1x_control.h  armms_limits.h  armms_user_input.h  at1x_fsm.h
armms_control/include/armms_control/fsm/: engine.h  state.h  transition.h
armms_control/launch/config/: at1x_control_settings.yaml
armms_control/src/: armms_at1x_control.cpp  armms_limits.cpp  armms_user_input.cpp
armms_description/: CMakeLists.txt  package.xml
armms_description/urdf/: at1x.urdf
armms_driver/: CMakeLists.txt  package.xml
armms_driver/include/armms_driver/: armms_api.h  armms_bag_recorder.h  armms_driver.h  armms_hardware.h  armms_hardware_interface.h  device_freejoy.h  device_twin_button.h  freejoy_config.h  hl_controller.h
armms_driver/include/armms_driver/comm/: armms_base_comm.h  armms_fake_comm.h  armms_kinova_comm.h
armms_driver/include/armms_driver/fsm/: engine.h  state.h  transition.h
armms_driver/include/kinovadrv/: kinovadrv.h
armms_driver/launch/: at1x_controller.launch  at1x_driver.launch
armms_driver/launch/config/: armms_driver.yaml  controllers.yaml  hardware.yaml  joint_limits.yaml  settings.yaml
armms_driver/lib/aarch64-linux-gnu/: libkinovadrv.so.0
armms_driver/scripts/gui/javascript/: orthopus_kinova_ui.js
armms_driver/src/: armms_api.cpp  armms_bag_recorder.cpp  armms_driver.cpp  armms_hardware_interface.cpp  device_freejoy.cpp  device_twin_button.cpp
armms_driver/src/comm/: armms_fake_comm.cpp  armms_kinova_comm.cpp
armms_driver/src/kinovadrv/: kinovadrv.cpp.old
armms_driver/src/nodes/: armms_driver_node.cpp  armms_hardware_interface_node.cpp
armms_hardware_interface/: CMakeLists copy.txt  CMakeLists.txt  package.xml
armms_hardware_interface/include/armms_hardware_interface/: armms_api.h  armms_hardware.h  armms_hardware_interface.h  device_twin_button.h  hl_controller.h  robot_manager_fsm.h
armms_hardware_interface/include/armms_hardware_interface/fsm/: engine.h  transition.h
armms_hardware_interface/include/kinovadrv/: kinovadrv.h
armms_hardware_interface/launch/: at1x_controller.launch
armms_hardware_interface/launch/config/: Untitled-1  armms_driver.yaml  controllers.yaml  hardware.yaml  joint_limits.yaml  settings.yaml
armms_hardware_interface/lib/aarch64-linux-gnu/: libkinovadrv.so.0  libkinovadrv.so.0.1.0
armms_hardware_interface/lib/x86_64-linux-gnu/: libkinovadrv.so.0
armms_hardware_interface/scripts/gui/javascript/: orthopus_kinova_ui.js
armms_hardware_interface/src/: armms_api.cpp  armms_driver.cpp  armms_hardware_interface.cpp  device_freejoy.cpp  device_twin_button.cpp  hl_controller.cpp
armms_hardware_interface/src/kinovadrv/: kinovadrv.cpp
armms_hardware_interface/src/nodes/: armms_driver_node.cpp  armms_hardware_interface_node.cpp  armms_input_freejoy_node.cpp
armms_msgs/: CMakeLists.txt  package.xml
armms_msgs/msg/: IntentInterface.msg  RpiInterface.msg
armms_msgs/srv/: ButtonEvent.srv  SetFloat.srv  SetInt.srv  SetMotorPower.srv  SetVelocitySetpoint.srv  UserIntentCalib.srv
armms_rpi/: CMakeLists.txt  package.xml
armms_rpi/include/armms_rpi/: armms_diagnostics.h  armms_motor_power.h  armms_power_button_led.h  armms_rpi.h  armms_rpi_diagnostics.h  armms_shutdown_manager.h  armms_switch_limit.h  armms_user_button.h
armms_rpi/launch/config/: rpi_settings.yaml
armms_rpi/src/: armms_diagnostics.cpp  armms_motor_power.cpp  armms_power_button_led.cpp  armms_rpi.cpp  armms_rpi_diagnostics.cpp  armms_shutdown_manager.cpp  armms_switch_limit.cpp  armms_user_button.cpp
armms_torque_test/: CMakeLists.txt  package.xml  setup.py
armms_torque_test/launch/: test.launch
armms_torque_test/launch/config/: config.yaml
armms_torque_test/scripts/: user_intent_test.py
armms_user_intent/: CMakeLists.txt  package.xml  setup.py
armms_user_intent/launch/: test.launch
armms_user_intent/launch/config/: config.yaml
armms_user_intent/scripts/: armms_user_intent.py
