<?xml version="1.0"?>
<package format="2">
  <name>armms_bringup</name>
  <version>0.1.0</version>
  <description>The armms_bringup package. Contains launch files for interacting with various armms robots. </description>  
  <author email="florian.armange@orthopus.com">Florian Armange (ORTHOPUS)</author>
  <maintainer email="florian.armange@orthopus.com">ORTHOPUS</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>remote_rosbag_record</depend>
  <depend>robot_upstart</depend>
  <export>
  </export>
</package>