<?xml version="1.0"?>
<package format="2">
  <name>armms_msgs</name>
  <version>0.0.1</version>
  <description>Message and service definition</description>
  <author email="florian.armange@orthopus.com">Florian Armange (ORTHOPUS)</author>
  <maintainer email="florian.armange@orthopus.com">ORTHOPUS</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <export>
  </export>
</package>
