<?xml version="1.0"?>
<package format="2">
  <name>armms_rpi</name>
  <version>0.0.1</version>
  <description>The ARMMS RPI provides all low level access of the RPI (GPIO).</description>
  <author email="florian.armange@orthopus.com">Florian Armange (ORTHOPUS)</author>
  <maintainer email="florian.armange@orthopus.com">ORTHOPUS</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>armms_msgs</depend>
  <depend>wiringPi</depend>
  <export>
  </export>
</package>
